hphp/test/slow/record/record-field-dup.php.expectf
Fatal error: Cannot redeclare record field B::x in %s/record-field-dup.php on line 7
